; ModuleID = '/home/carl/AnghaBench/openwrt/package/system/mtd/src/extr_mtd.c_mtd_erase_block.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/system/mtd/src/extr_mtd.c_mtd_erase_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.erase_info_user = type { i32, i32 }

@erasesize = common dso_local global i32 0, align 4
@MEMUNLOCK = common dso_local global i32 0, align 4
@MEMERASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtd_erase_block(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.erase_info_user, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = getelementptr inbounds %struct.erase_info_user, %struct.erase_info_user* %6, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @erasesize, align 4
  %10 = getelementptr inbounds %struct.erase_info_user, %struct.erase_info_user* %6, i32 0, i32 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MEMUNLOCK, align 4
  %13 = call i64 @ioctl(i32 %11, i32 %12, %struct.erase_info_user* %6)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @MEMERASE, align 4
  %16 = call i64 @ioctl(i32 %14, i32 %15, %struct.erase_info_user* %6)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %18
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @ioctl(i32, i32, %struct.erase_info_user*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
